@@ -1,3 +1,9 @@
+(Robert Tansley)
+- Error pages now return appropriate HTTP status codes (e.g. 404 not found)
+- Bad filenames in /bitstream/ URLs now result in 404 error -- prevents
+  infinite URL spaces confusing crawlers and bad "persistent" bitstream IDs
+  circulating
+
 1.4.1 beta 1
 ============
 (Scott Yeadon)
